--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -250,7 +250,7 @@
   "my_position": "내위치",
   "get_powers": "산출 이익",
   "node_martgage": "노드 저당",
-  "available_mortgage_numbers": "저당 가능 수량",
+  "available_mortgage_numbers": "저당 가능 수량${number}",
   "commiting": "제출 중",
   "mortgage": "저당",
   "free_receive": "무료 수령",
@@ -285,7 +285,7 @@
   "balance_lack": "잔액 부족",
   "click_charge": "충전하시려면 클릭하세요",
   "available_balance_usdt": "사용가능한 ${amount} USDT",
-  "current_rate_func": "현재 환율",
+  "current_rate_func": "현재${currency} 환율${quotes}：1${rate}",
   "logining": "로그인 중",
   "login": "로그인",
   "email_label": "이메일 주소",
@@ -301,7 +301,7 @@
   "reset_account_password": "계정 비밀번호 재설정",
   "verification_code": "인증코드",
   "please_input_verification_code": "6자리 인증코드를 입력해 주세요",
-  "get_verification_code_again": "인증 코드 다시 받기",
+  "get_verification_code_again": "인증 코드 다시 받기${countdownTime}",
   "send_verification_code": "인증 코드 보내기",
   "account_new_password": "계정의 새로운 비밀번호",
   "password_length_error_message": "최소한 6자리 이상의 비밀번호를 입력해 주세요",
@@ -331,13 +331,13 @@
   "please_input_fund_pwd_hint": "자금 비밀번호를 입력해 주세요",
   "recharge": "재 충전",
   "fail_get_user_recharge_address_hint": "사용자 재충전주소 불러오기 실패",
-  "current_exchange_rate": "현재 환율",
+  "current_exchange_rate": "현재${to} 환율${currency}",
   "Tips": "팁",
   "create": "새로 만들기",
   "recharge_success_hint": "재충전 성공",
   "transfer_warning_hint": "HYN이나 USDT (ERC20) 자산으로 이체해 주세요. 이체 시 전체 네트워크 노드에서 확인이 필요하며 약 10 분 가량 소요됩니다",
   "task_finish_day_hint": "오늘의 임무를 완료 하였습니다",
-  "task_finish_func": "이미 임무를 완료하였습니다",
+  "task_finish_func": "이미 임무를 완료하였습니다${total}",
   "time_f": "시간",
   "load_fail_click_hint": "다운로드 실패, 다시 클릭해 주세요",
   "the_horizon_hint": "_______지평선________",
@@ -365,7 +365,7 @@
   "cybersquatting": "사이버 스쿼팅",
   "stay_func": "나머지 ${snapUpStocks}",
   "income_func": "${incomeCycle}하루 수익",
-  "mortgage_product_func": "모기지(저당) 상품",
+  "mortgage_product_func": "모기지(저당) 상품: ${name}",
   "Insufficient_balance_hint": "저당에 사용할 수 있는 잔액이 부족합니다",
   "mortgage_success_hint": "저당 성공",
   "tip_node_mortgages_balances_hint": " 팁: 노드 모기지에 대해서만 소득 잔액을 사용할  수 있습니다.",
@@ -396,7 +396,7 @@
   "no_eth_address": "이더륨 주소가 아닙니다",
   "quantity": "수량",
   "please_input_withdrawal_quantity": "출금수량을 입력해 주세요",
-  "withdrawal_fee": "출금 수수료",
+  "withdrawal_fee": "출금 수수료(${fee}%)",
   "amount_received": "수령한 HYN 계정수량",
   "withdrawal_audit_message": "해당 HYN 으로 환산하여 당신의 출금 주소에 표시 됩니다. 당신 자금의 안전을 위하여 인위적으로 심사를 진행하여 당일 출금됩니다. 비근무시간에 접수된 주문은 다음날 출금 됩니다 ，출금 처리시간 : 오전 9:00  오후 21:00",
   "over_max_withdrawal": "최대 출금 한도 초과",
@@ -647,7 +647,7 @@
   "poi_total_data": "POI 데이터 분포",
   "epidemic_map": "새로운 코로나바이러스의 발병지도",
   "epidemic_map_desc": "새로운 코로나바이러스의 발병지도 상세설명",
-  "buy_need_hyn_usdt_func": "필요한 HYN/ USDT 를 구입하세요",
+  "buy_need_hyn_usdt_func": "필요한 HYN ${hyn}U / USDT ${usdt}U 를 구입하세요",
   "balance_hyn_usdt": "가용잔액 HYN등가 ${hyn}，USDT직접충전 ${usdt}",
   "hyn_eq_u": "HYN = U",
   "usdt_direct": "USDT 직접충전",
