wallet can show mnemonic qrcode

--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -77,7 +77,7 @@
   "skip": "跳过",
   "Next": "下一页",
   "enter": "进入",
-  "copyed": "已拷贝",
+  "copyed": "复制成功",
   "Clean": "清除痕迹",
   "time": "营业时间",
   "services": "服务",
@@ -576,5 +576,7 @@
   "contract_share_content": "\"${who}\"在${appName}上发现了海伯利安${nodeName}合约，年化奖励去到${annualized}，周期${duration}天，邀请你前往围观！",
   "reset_input_contract": "重新投入",
   "reset_output_contract": "重新提取",
-  "contract_launch_fail_please_get_back": "合约启动失败，请申请退款"
+  "contract_launch_fail_please_get_back": "合约启动失败，请申请退款",
+  "mnemonic_qrcode_tip": "这个二维码包含你的助记词",
+  "qrcode": "二维码"
 }
