--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -270,8 +270,8 @@
   "please_open_bluetooth": "蓝牙信标可以有效辅助定位，请开启设备蓝牙",
   "open_wifi": "开启WIFI",
   "please_open_wifi": "WIFI信号可以辅助三角定位，请开启设备WIFI",
-  "require_location": "申请定位授权",
-  "require_location_message": "请你授权使用定位功能.",
+  "require_location": "授权申请",
+  "require_location_message": "无法获得位置信息，请你授予使用定位权限。",
   "open_location_service": "打开定位服务",
   "open_location_service_message": "定位服务已关闭，请开启",
   "scan_name_wifi": "WiFi",
