--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -422,8 +422,8 @@
   "service_provider": "服务商",
   "node_location": "节点位置",
   "please_confirm_eth_gas_enough": "•  请确保钱包账户（$walletName）的ETH GAS费充足",
-  "create_no_enough_hyn_start_fail": "•  创建后，若7天内没能积攒足够启动所需HYN，则本次Map3节点抵押合约启动失败。已投入的HYN可自行取回。",
-  "contract_create_cant_destroy": "•  Map3节点抵押合约创建后不可撤销。",
+  "create_no_enough_hyn_start_fail": "•  创建后，若7天内没能积攒足够启动所需HYN，则本次节点合约启动失败。已投入的HYN可自行取回。",
+  "contract_create_cant_destroy": "•  节点合约创建后不可撤销。",
   "freeze_balance_reward_direct_push": "•  创建节点需要暂时冻结500U账户余额，用于支付直推人的贡献奖励。直推人及奖励收取节点总收益的5%。",
   "confirm_bug": "确认提交",
   "mortgage_hyn_num": "抵押HYN数量",
@@ -451,7 +451,8 @@
   "truely_date_accurate": "具体以实际日期为准",
   "confirm_mortgage": "确定抵押",
   "no_enough_hyn_fail_invest_extract": "•  投入后，若在规定期限内Map3节点抵押合约不能积攒够启动所需HYN，则本次合约启动失败。已投入的HYN可自行取回。",
-  "invest_cant_undo": "•  投入Map3节点后不可撤销。",
+  "mortgage_quantity_standard": "•  最终抵押hyn数量以链上实际交易数量为准。",
+  "invest_cant_undo": "•  投入节点合约后不可撤销。",
   "account_flow": "合约流水",
   "total": "总额",
   "part_member": "参与地址",
@@ -461,7 +462,7 @@
   "node_mortgage_contract": "Map3节点合约",
   "please_input_hyn_count": "请输入HYN数量",
   "broadcase_success": "广播成功",
-  "map_node_broadcase_success_description": "已在区块链上网络广播 ${actionType} Map3节点抵押合约的消息，区块链网络需要5-30分钟开采验证。",
+  "map_node_broadcase_success_description": "已在区块链上网络广播 ${actionType} Map3节点合约的消息，区块链网络需要5-30分钟开采验证。",
   "transfer_broadcase_success_description": "已在区块链上网络广播转账的消息，区块链网络需要5-30分钟开采验证。",
   "create": "创建",
   "map_node_contract_address": "Map3节点合约(${receiverAddress})",
