--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -724,6 +724,7 @@
   "expire_end": "만기 종료",
   "truely_date_accurate": "실제 날짜에 따라 달라질 수 있습니다",
   "no_enough_hyn_fail_invest_extract": "투자 후 지정된 기간 이내에 필요한 HYN을 시작하기에 충분한 HYN이 축적되어 있지 않으면, Map3 노드 모기지 계약이 실패하고 투자된 HYN은 자체적으로 회수할 수 있습니다.",
+  "mortgage_quantity_standard": "•  抵押hyn数量以最终链上交易数量为准。",
   "invest_cant_undo": "Map3 노드에 진입한 후 취소 가능",
   "account_flow": "계좌 내역",
   "total": "총액",
