--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -736,7 +736,7 @@
   "node_mortgage_contract": "Map3节点合约",
   "please_input_hyn_count": "请输入HYN数量",
   "broadcase_success": "广播成功",
-  "map_node_broadcase_success_description": "已在区块链上网络广播 ${actionType} Map3节点合约的消息，区块链网络需要5-30分钟开采验证。",
+  "map_node_broadcase_success_description": "已在区块链上网络广播 【${actionType} Map3节点合约】的消息，区块链网络需要5-30分钟开采验证。",
   "transfer_broadcase_success_description": "已在区块链上网络广播转账的消息，区块链网络需要5-30分钟开采验证。",
   "map_node_contract_address": "Map3节点合约(${receiverAddress})",
   "launch": "发起",
@@ -855,12 +855,12 @@
   "contract_launch_fail_please_get_back": "合约启动失败，请申请退款",
   "mnemonic_qrcode_tip": "这个二维码包含你的助记词",
   "qrcode": "二维码",
-  "time_left": "剩余",
   "delegation_amount_full": "抵押已满",
   "time_left": "剩余",
   "camera_scan": "相机扫描",
   "import_from_album": "从相册导入",
   "select_qrcode_picture": "选择二维码图片",
   "all_picture": "所有图片",
-  "select_picture": "选择图片"
+  "select_picture": "选择图片",
+  "launcher_time_left": "启动剩${time}"
 }
