[add] add new signal ui

--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -523,9 +523,9 @@
   "no_more_data": "—— 这是地平线了 ——",
   "load_failed_click_retry": "加载失败，点击重试",
   "price_show": "价格显示",
-  "my_initiated_map_contract": "我发起的Map3合约",
+  "my_initiated_map_contract": "我发起的",
   "please_create_import_wallet": "请创建/导入钱包",
-  "my_join_map_contract": "我参与的Map3合约",
+  "my_join_map_contract": "我参与的",
   "wallet_account": "钱包账户",
   "create_map_node_must_have_block_account": "创建Map3抵押节点前，你必须先拥有一个区块链钱包账户。",
   "undefind_error": "未定义错误",
