--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -856,5 +856,6 @@
   "import_from_album": "从相册导入",
   "select_qrcode_picture": "选择二维码图片",
   "all_picture": "所有图片",
-  "select_picture": "选择图片"
+  "select_picture": "选择图片",
+  "launcher_time_left": "启动剩${time}"
 }
