--- a/res/values/strings_zh_HK.arb
+++ b/res/values/strings_zh_HK.arb
@@ -586,5 +586,8 @@
   "import_from_album": "从相册导入",
   "select_qrcode_picture": "选择二维码图片",
   "all_picture": "所有图片",
-  "select_picture": "选择图片"
+  "select_picture": "选择图片",
+  "renew_contract_ing": "复投中...",
+  "renew_contract": "续约复投",
+  "join_map_node_must_have_block_account": "参与Map3抵押节点前，你必须先拥有一个区块链钱包账户。"
 }
