--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -404,9 +404,9 @@
   "global_data_map3": "Map3节点",
   "global_data_signal": "信号数据",
   "global_data_poi": "POI数据",
-  "signal_chart_desc_map3": "''Map3节点网络启用全新的空间数据模型，旨在大规模、高性能及低成本地将基础设施提升1000倍。Map3是由One Map算法技术支撑的去中心化地图/位置服务PaaS, 旨在支持构建Map3去中心化节点的大型网络。''",
-  "signal_chart_desc_signal": "''信号数据将有效提升去中心化地图的定位精准度，只要有GPS，蓝牙，基站或WIFI信号的地区就能提供有效的应急救援、精准导航等定位功能，适用于户外徒步或探险等多场景应用。''",
-  "signal_chart_desc_poi": "''POI贡献基于众包、众治的去中心化理念，以去中心化的最有效方式鼓励用户贡献真实详细的位置详情。为避免POI信息有误，同时推出博弈系统配合网络验证，开放给所有地图用户查验POI数据真实性。未来想要搜索附近好吃好玩的目的地，只需在App首页输入关键字，如美食、酒店、商场、景点等，即可查看该位置点详情。''",
+  "signal_chart_desc_map3": "''<strong>Map3节点</strong>网络启用全新的空间数据模型，旨在大规模、高性能及低成本地将基础设施提升<strong>1000倍</strong>。Map3是由<strong>One Map算法技术</strong>支撑的去中心化地图/位置服务PaaS, 旨在支持构建Map3<strong>去中心化节点</strong>的大型网络。''",
+  "signal_chart_desc_signal": "''信号数据将有效提升去中心化地图的<strong>定位精准度</strong>，只要有<strong>GPS，蓝牙，基站或WIFI信号</strong>的地区就能提供有效的<strong>应急救援、精准导航</strong>等定位功能，适用于户外徒步或探险等多场景应用。''",
+  "signal_chart_desc_poi": "''POI贡献基于<strong>众包、众治的去中心化理念</strong>，以去中心化的最有效方式鼓励用户贡献真实详细的<strong>位置详情</strong>。为避免POI信息有误，同时推出<strong>博弈系统</strong>配合网络验证，开放给所有地图用户<strong>查验POI数据真实性</strong>。未来想要搜索附近好吃好玩的目的地，只需在App首页输入关键字，如美食、酒店、商场、景点等，即可查看该位置点详情。''",
   "signal_chart_last_month_numbers_func": "最近一个月${scanName}数据增量：",
   "signal_total_data": "信号数据总量：",
   "poi_total_data": "POI数据分布：",
@@ -591,5 +591,6 @@
   "renew_contract": "续约复投",
   "join_map_node_must_have_block_account": "参与Map3抵押节点前，你必须先拥有一个区块链钱包账户。",
   "launcher_time_left": "启动剩${time}",
-  "scan_qrcode_result": "扫码结果"
+  "scan_qrcode_result": "扫码结果",
+  "global_node_map_title": "全球节点分布:"
 }
