--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -865,5 +865,7 @@
   "global_node_map_title": "全球节点分布:",
   "my_contract": "我的合约",
   "active": "启动",
-  "expired": "到期"
+  "expired": "到期",
+  "number": "编号",
+  "launcher_func": "发起人:  ${UiUtil.shortEthAddress(contractNodeItem.ownerName)}"
 }
