--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -867,12 +867,12 @@
   "join_map_node_must_have_block_account": "参与Map3抵押节点前，你必须先拥有一个区块链钱包账户。",
   "launcher_time_left": "启动剩${time}",
   "scan_qrcode_result": "扫码结果",
-  "my_contract": "我的合约",
+  "my_contract": "Map3节点",
   "active": "启动",
   "global_node_map_title": "全球节点分布:",
   "your_level_low_cant_create_contract": "您的等级较低，不能创建合约！",
   "expired": "到期",
   "number": "编号",
-  "freezeContentDesc": "作为当前合约的创建者，你需要给直推人数额为5%合约总收益作为推荐奖励，系统会为你自动划转。",
+  "freezeContentDesc": "作为当前节点的创建者，您需要给直推人节点总收益的5%作为推荐奖励，系统将为您自动划转。",
   "launcher_func": "发起人:  ${ownerName}"
 }
