--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -727,7 +727,7 @@
   "no_enough_hyn_fail_invest_extract": "•  投入后，若在规定期限内Map3节点不能积攒够启动所需HYN，则本次节点启动失败。已投入的HYN可自行取回。",
   "mortgage_quantity_standard": "•  最终抵押hyn数量以链上实际交易数量为准。",
   "invest_cant_undo": "•  投入节点后不可撤销。",
-  "account_flow": "合约流水",
+  "account_flow": "节点流水",
   "total": "总额",
   "part_member": "参与地址",
   "total_member_count": "共：$memberCount（个）",
@@ -823,8 +823,8 @@
   "join_delegate": "参与抵押",
   "manager_tip_hyn": "管理费(HYN)",
   "withdrawRefund": "申请退款",
-  "join_map3_level_min": "• 等级必须大于等于【${levelName}】才能创建节点合约。",
-  "referrer_reward_tip": "• 节点合约期满后，你需要给直推人合约总收益的5%作为他的推荐奖励。",
+  "join_map3_level_min": "• 等级必须大于等于【${levelName}】才能创建节点。",
+  "referrer_reward_tip": "• 节点期满后，你需要给直推人节点总收益的5%作为他的推荐奖励。",
   "contract_had_stop": "节点已结束",
   "contract_had_expired": "节点已到期",
   "create_contract_only_one_hint": "• 一个地址同一时间只能创建一个节点。节点完成后，该地址才可创建新节点。",
@@ -868,7 +868,7 @@
   "launcher_time_left": "启动剩${time}",
   "scan_qrcode_result": "扫码结果",
   "global_node_map_title": "全球节点分布:",
-  "your_level_low_cant_create_contract": "您的等级较低，不能创建合约！",
+  "your_level_low_cant_create_contract": "您的等级较低，不能创建节点！",
   "my_contract": "Map3节点",
   "active": "启动",
   "expired": "到期",
