update 5% to recommender

--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -769,7 +769,7 @@
   "earned_rewards": "已获取奖励",
   "congratulation_reward_withdrawn": "恭喜，已提取奖励",
   "map_node_detail": "Map3节点详情",
-  "click_view_detail": "点击查看详情",
+  "click_view_detail": "访问节点",
   "you_have_invested_hyn": "你已投入(HYN)",
   "expected_output_hyn": "预期产出(HYN)",
   "create_time": "创建时间",
@@ -849,7 +849,7 @@
   "delegation_full_will_active_hint": "抵押已满，即将启动",
   "expire_date": "期满可提",
   "no_hash_found": "暂未发现交易哈希",
-  "contract_share_content": "\"${who}\"在${appName}上发现了海伯利安${nodeName}节点，年化奖励去到${annualized}，周期${duration}天，邀请你前往围观！",
+  "contract_share_content": "\"${who}\"在${appName}上发现了海伯利安${nodeName}，年化奖励去到${annualized}，周期${duration}天，邀请你前往围观！",
   "reset_input_contract": "重新投入",
   "reset_output_contract": "重新提取",
   "contract_launch_fail_please_get_back": "节点启动失败，请申请退款",
