--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -496,7 +496,7 @@
   "earned_rewards": "已获取奖励",
   "congratulation_reward_withdrawn": "恭喜，已提取奖励",
   "map_node_detail": "Map3节点详情",
-  "click_view_detail": "点击查看详情",
+  "click_view_detail": "访问节点",
   "you_have_invested_hyn": "你已投入(HYN)",
   "expected_output_hyn": "预期产出(HYN)",
   "create_time": "创建时间",
