--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -597,5 +597,9 @@
   "active": "启动",
   "expired": "到期",
   "number": "编号",
-  "launcher_func": "发起人:  ${ownerName}"
+  "launcher_func": "发起人:  ${ownerName}",
+  "n_second": "${n}秒",
+  "left": "剩",
+  "n_hour_simple": "${hour}时",
+  "n_minute_simple": "${minute}分"
 }
