--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -597,7 +597,7 @@
   "active": "启动",
   "expired": "到期",
   "number": "编号",
-  "launcher_func": "发起人:  ${ownerName}",
+  "launcher_func": "创建者: ${ownerName}",
   "n_second": "${n}秒",
   "left": "剩",
   "n_hour_simple": "${hour}时",
