--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -131,12 +131,12 @@
   "account_backup_next_step_notice": "在下一步中，您将看到12个允许您恢复账户的单词",
   "lossz_wallet_mnemonic_notice": "我明白，如果我丢失了恢复单词，我将无法访问我的钱包",
   "continue_text": "继续",
-  "your_mnemonic": "您的恢复短语",
+  "your_mnemonic": "您的助记词",
   "save_mnemonic_notice": "按正确的顺序记下或复制这些单词，并将他们保存在安全的地方。",
-  "save_mnemonic_safe_notice": "永远不要与任何人共享恢复短语，安全的存储它！",
-  "confirm_mnemonic": "输入恢复短语",
+  "save_mnemonic_safe_notice": "永远不要与任何人共享助记词，安全的存储它！",
+  "confirm_mnemonic": "输入助记词",
   "confirm_mnemonic_tips": "点击单词，把他们按正确的顺序放在一起",
-  "confirm_mnemonic_incorrect": "您的恢复短语不正确，请重新尝试",
+  "confirm_mnemonic_incorrect": "您的助记词不正确，请重新尝试",
   "wallet_create_success": "账户创建成功",
   "wallet_create_success_tips": "恭喜，你的私密账户已经创建成功",
   "user_this_account": "使用该私密账户",
@@ -155,7 +155,7 @@
   "wallet_name": "钱包名称",
   "please_input_wallet_name": "请输入钱包名称",
   "backup_option": "备份选项",
-  "show_mnemonic_label": "显示恢复短语",
+  "show_mnemonic_label": "显示助记词",
   "wallet_setting_backup_notice": "如果你无法访问这个设备，你的资金将无法找回，除非你备份了！",
   "delete_wallet_success": "删除成功",
   "delete_wallet_fail": "删除失败",
