[add] add translations

--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -877,5 +877,32 @@
   "create_or_import_wallet_first": "请先创建/导入钱包",
   "map_smart_contract_management": "map3智能合约管理",
   "scan": "扫一扫",
-  "start_navigation_tips": "탐색 시작"
+  "start_navigation_tips": "탐색 시작",
+  "nonce_too_low_hint": "nonce值太低",
+  "nonce_too_high_hint": "nonce值太高",
+  "gas_limit_reached_hint": "gas达到限制",
+  "insufficient_funds_for_transfer_hint": "转账资金不足",
+  "intrinsic_gas_too_low_hint": "固有gas太低",
+  "insufficient_funds_for_gas_price_value_hint": "gas资金不足",
+  "provision_insufficient_hint": "provision insufficient",
+  "not_half_time_to_collect_hint": "not half time to collect",
+  "already_collected_hint": "already collected",
+  "already_imported_hint": "已导入",
+  "no_longer_valid_hint": "不再有效",
+  "transaction_limit_reached_hint": "Transaction limit reached",
+  "insufficient_gas_price_hint": "Insufficient gas price.",
+  "gas_price_too_low_to_replace_hint": "Gas price too low to replace",
+  "insufficient_gas_hint": "Insufficient gas.",
+  "insufficient_balance_for_transaction_hint": "Insufficient balance for transaction.",
+  "gas_limit_exceeded_hint": "Gas limit exceeded.",
+  "insufficient_balance_to_stake_hint": "insufficient balance to stake",
+  "self_delegation_insufficient_hint": "self delegation insufficient",
+  "delegation_insufficient_hint": "delegation insufficient",
+  "not_equal_to_remaining_delegation_hint": "not equal to remaining delegation",
+  "node_already_exist_hint": "node already exist",
+  "node_not_exist_hint": "node not exist",
+  "not_allow_to_delegate_in_unpending_state_hint": "not allow to delegate in unpending state",
+  "not_allow_to_collect_in_pending_state_hint": "not allow to collect in pending state",
+  "delegator_not_exist_hint": "delegator not exist",
+  "not_time_to_collect_hint": "not time to collect"
 }
