[add] add translations

--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -608,31 +608,31 @@
   "map_smart_contract_management": "map3智能合约管理",
   "scan": "扫一扫",
   "start_navigation_tips": "开始导航",
-  "nonce_too_low_hint": "nonce值太低",
-  "nonce_too_high_hint": "nonce值太高",
-  "gas_limit_reached_hint": "gas达到限制",
+  "nonce_too_low_hint": "随机值太低",
+  "nonce_too_high_hint": "随机值太高",
+  "gas_limit_reached_hint": "Gas超过区块限制",
   "insufficient_funds_for_transfer_hint": "转账资金不足",
-  "intrinsic_gas_too_low_hint": "固有gas太低",
+  "intrinsic_gas_too_low_hint": "指定Gas不够",
   "insufficient_funds_for_gas_price_value_hint": "gas资金不足",
-  "provision_insufficient_hint": "provision insufficient",
-  "not_half_time_to_collect_hint": "not half time to collect",
-  "already_collected_hint": "already collected",
+  "provision_insufficient_hint": "奖金池正在准备中",
+  "not_half_time_to_collect_hint": "未达到提取一半收益的时间",
+  "already_collected_hint": "已经提取了",
   "already_imported_hint": "已导入",
   "no_longer_valid_hint": "不再有效",
-  "transaction_limit_reached_hint": "Transaction limit reached",
-  "insufficient_gas_price_hint": "Insufficient gas price.",
-  "gas_price_too_low_to_replace_hint": "Gas price too low to replace",
-  "insufficient_gas_hint": "Insufficient gas.",
-  "insufficient_balance_for_transaction_hint": "Insufficient balance for transaction.",
-  "gas_limit_exceeded_hint": "Gas limit exceeded.",
-  "insufficient_balance_to_stake_hint": "insufficient balance to stake",
-  "self_delegation_insufficient_hint": "self delegation insufficient",
-  "delegation_insufficient_hint": "delegation insufficient",
-  "not_equal_to_remaining_delegation_hint": "not equal to remaining delegation",
-  "node_already_exist_hint": "node already exist",
-  "node_not_exist_hint": "node not exist",
-  "not_allow_to_delegate_in_unpending_state_hint": "not allow to delegate in unpending state",
-  "not_allow_to_collect_in_pending_state_hint": "not allow to collect in pending state",
-  "delegator_not_exist_hint": "delegator not exist",
-  "not_time_to_collect_hint": "not time to collect"
+  "transaction_limit_reached_hint": "达到交易次数上限",
+  "insufficient_gas_price_hint": "Gas价格过低.",
+  "gas_price_too_low_to_replace_hint": "Gas价格太低不足以覆盖交易",
+  "insufficient_gas_hint": "Gas不足.",
+  "insufficient_balance_for_transaction_hint": "余额不足以转账.",
+  "gas_limit_exceeded_hint": "Gas总量不足.",
+  "insufficient_balance_to_stake_hint": "余额不足以抵押",
+  "self_delegation_insufficient_hint": "当前抵押金额不足",
+  "delegation_insufficient_hint": "抵押不足",
+  "not_equal_to_remaining_delegation_hint": "小于最小抵押量",
+  "node_already_exist_hint": "节点已经存在",
+  "node_not_exist_hint": "节点不存在",
+  "not_allow_to_delegate_in_unpending_state_hint": "非待启动状态不能抵押",
+  "not_allow_to_collect_in_pending_state_hint": "该状态下不能提币",
+  "delegator_not_exist_hint": "代理人不存在",
+  "not_time_to_collect_hint": "未达到提取收益的时间"
 }
