[add] add translations

--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -877,18 +877,18 @@
   "create_or_import_wallet_first": "请先创建/导入钱包",
   "map_smart_contract_management": "map3智能合约管理",
   "scan": "扫一扫",
-  "start_navigation_tips": "탐색 시작",
-  "nonce_too_low_hint": "nonce值太低",
-  "nonce_too_high_hint": "nonce值太高",
-  "gas_limit_reached_hint": "gas达到限制",
-  "insufficient_funds_for_transfer_hint": "转账资金不足",
-  "intrinsic_gas_too_low_hint": "固有gas太低",
-  "insufficient_funds_for_gas_price_value_hint": "gas资金不足",
+  "start_navigation_tips": "Start navigation",
+  "nonce_too_low_hint": "nonce too low",
+  "nonce_too_high_hint": "nonce too high",
+  "gas_limit_reached_hint": "gas limit reached",
+  "insufficient_funds_for_transfer_hint": "insufficient funds for transfer",
+  "intrinsic_gas_too_low_hint": "intrinsic gas too low ",
+  "insufficient_funds_for_gas_price_value_hint": "insufficient funds for gas price value ",
   "provision_insufficient_hint": "provision insufficient",
   "not_half_time_to_collect_hint": "not half time to collect",
   "already_collected_hint": "already collected",
-  "already_imported_hint": "已导入",
-  "no_longer_valid_hint": "不再有效",
+  "already_imported_hint": "already imported",
+  "no_longer_valid_hint": "no longer valid",
   "transaction_limit_reached_hint": "Transaction limit reached",
   "insufficient_gas_price_hint": "Insufficient gas price.",
   "gas_price_too_low_to_replace_hint": "Gas price too low to replace",
