--- a/res/values/strings_zh_HK.arb
+++ b/res/values/strings_zh_HK.arb
@@ -60,7 +60,7 @@
   "label": "標簽",
   "telphone": "電話",
   "search_empty_data": "暫無數據",
-  "decrypt_location_cipher_tips": "怎麽解碼位置密文？",
+  "decrypt_location_cipher_tips": "怎麼解碼位置密文？",
   "decrypt_location_cipher_tips_context": "請粘貼位置密文，點擊搜索即可解碼密文。",
   "input_search_keyworod_or_cipher": "輸入搜索詞 / 密文",
   "search_history": "歷史搜索",
@@ -292,7 +292,7 @@
   "scan_confirm_upload" : "上傳信號數據",
   "scan_collect_signal_func": "已收集到${num}個信號",
   "selected_area": "選擇地區",
-  "what_region_use_titan": "妳在什麽地區使用${app}?",
+  "what_region_use_titan": "妳在什麼地區使用${app}?",
   "select_region_tip": "請選擇地區",
   "data_save": "存儲",
   "input_valid_address": "請輸入合法的接收者地址",
@@ -410,229 +410,229 @@
   "signal_chart_last_month_numbers_func": "最近壹個月${scanName}數據增量：",
   "signal_total_data": "信號數據總量：",
   "poi_total_data": "POI數據分布：",
-  "wait_start_node_contract": "待启动的合约",
-  "earth_outpace_server_node": "全球超过%d个地球服务站点",
-  "map_provide_stable_server": "为海伯利安地图提供稳定可靠的地图服务",
-  "create_contract": "创建合约",
+  "wait_start_node_contract": "待啟動的合約",
+  "earth_outpace_server_node": "全球超過%d個地球服務站點",
+  "map_provide_stable_server": "為海伯利安地圖提供穩定可靠的地圖服務",
+  "create_contract": "創建合約",
   "highest": "最高",
-  "annualized_rewards": "年化奖励",
-  "remain": "还差",
-  "join": "参与",
-  "node_version": "节点版本",
-  "service_provider": "服务商",
-  "node_location": "节点位置",
-  "please_confirm_eth_gas_enough": "·  请确保钱包账户（$walletName）的ETH GAS费充足",
-  "create_no_enough_hyn_start_fail": "·  创建后，若7天内没能积攒足够启动所需HYN，则本次Map3节点抵押合约启动失败。投入HYN的钱包账户可提取自己投入的HYN资金。",
-  "contract_create_cant_destroy": "·  Map3节点抵押合约创建后不可撤销。",
-  "freeze_balance_reward_direct_push": "·  创建节点需要暂时冻结500U账户余额，用于支付直推人的贡献奖励。直推人及奖励收取节点总收益的5%。",
-  "confirm_bug": "确定买入",
-  "mortgage_hyn_num": "抵押HYN数量",
-  "mortgage_wallet_balance": "（钱包余额 $balance）",
-  "mintotal_buy": "最低买入$minTotal",
-  "mintotal_hyn": "不能少于${minTotal}HYN",
-  "hyn_balance_no_enough": "HYN余额不足",
-  "balance_portion_hyn": "剩余份额(HYN)：",
-  "all_bug": "全部买入",
-  "end_profit_hyn": "期满共产生(HYN)：",
-  "spend_manager_hyn": "应付管理费(HYN)：",
-  "get_manager_hyn": "获得管理费(HYN)：",
-  "node_contract_detail": "节点抵押合约详情",
-  "join_map_node_mortgage": "参与Map3节点抵押",
-  "create_map_mortgage_contract": "创建Map3抵押合约",
-  "ten_thousand_annualizedyield": "万/$annualizedYield",
-  "all_join_end_reward": "共需投入资金(HYN) / 期满年化奖励",
+  "annualized_rewards": "年化獎勵",
+  "remain": "還差",
+  "join": "參與",
+  "node_version": "節點版本",
+  "service_provider": "服務商",
+  "node_location": "節點位置",
+  "please_confirm_eth_gas_enough": "·  請確保錢包賬戶（$walletName）的ETH GAS費充足",
+  "create_no_enough_hyn_start_fail": "·  創建後，若7天內沒能積攢足夠啟動所需HYN，則本次Map3節點抵押合約啟動失敗。投入HYN的錢包賬戶可提取自己投入的HYN資金。",
+  "contract_create_cant_destroy": "·  Map3節點抵押合約創建後不可撤銷。",
+  "freeze_balance_reward_direct_push": "·  創建節點需要暫時凍結500U賬戶余額，用於支付直推人的貢獻獎勵。直推人及獎勵收取節點總收益的5%。",
+  "confirm_bug": "確定買入",
+  "mortgage_hyn_num": "抵押HYN數量",
+  "mortgage_wallet_balance": "（錢包余額 $balance）",
+  "mintotal_buy": "最低買入$minTotal",
+  "mintotal_hyn": "不能少於${minTotal}HYN",
+  "hyn_balance_no_enough": "HYN余額不足",
+  "balance_portion_hyn": "剩余份額(HYN)：",
+  "all_bug": "全部買入",
+  "end_profit_hyn": "期滿共產生(HYN)：",
+  "spend_manager_hyn": "應付管理費(HYN)：",
+  "get_manager_hyn": "獲得管理費(HYN)：",
+  "node_contract_detail": "節點抵押合約詳情",
+  "join_map_node_mortgage": "參與Map3節點抵押",
+  "create_map_mortgage_contract": "創建Map3抵押合約",
+  "ten_thousand_annualizedyield": "萬/$annualizedYield",
+  "all_join_end_reward": "共需投入資金(HYN) / 期滿年化獎勵",
   "min_invest": "最低投入",
-  "create_min_invest": "创建最低投入",
-  "contract_deadline": "合约期限",
-  "manage_fee": "管理费",
+  "create_min_invest": "創建最低投入",
+  "contract_deadline": "合約期限",
+  "manage_fee": "管理費",
   "today_join": "今日加入",
-  "withdraw_reward": "提取奖励50%",
-  "expire_end": "期满结束",
-  "truely_date_accurate": "具体以实际日期为准",
-  "confirm_mortgage": "确定抵押",
-  "no_enough_hyn_fail_invest_extract": "·  投入后，若在规定期限内Map3节点抵押合约不能积攒够启动所需HYN，则本次合约启动失败。投入HYN的钱包账户可提取自己投入的HYN资金。",
-  "mortgage_quantity_standard": "•  抵押hyn数量以最终链上交易数量为准。",
-  "invest_cant_undo": "·  投入Map3节点后不可撤销。",
-  "account_flow": "合约流水",
-  "total": "总额",
-  "part_member": "参与地址",
-  "total_member_count": "共：$memberCount（个）",
-  "invite_friend_join": "邀请好友\n参加",
-  "sponsor": "发起人",
-  "node_mortgage_contract": "Map3节点合约",
-  "please_input_hyn_count": "请输入HYN数量",
-  "broadcase_success": "广播成功",
-  "map_node_broadcase_success_description": "已在区块链上网络广播 ${actionType} Map3节点抵押合约的消息，区块链网络需要5-30分钟开采验证。",
-  "transfer_broadcase_success_description": "已在区块链上网络广播转账的消息，区块链网络需要5-30分钟开采验证。",
-  "create": "创建",
-  "map_node_contract_address": "Map3节点合约(${receiverAddress})",
-  "launch": "发起",
+  "withdraw_reward": "提取獎勵50%",
+  "expire_end": "期滿結束",
+  "truely_date_accurate": "具體以實際日期為準",
+  "confirm_mortgage": "確定抵押",
+  "no_enough_hyn_fail_invest_extract": "·  投入後，若在規定期限內Map3節點抵押合約不能積攢夠啟動所需HYN，則本次合約啟動失敗。投入HYN的錢包賬戶可提取自己投入的HYN資金。",
+  "mortgage_quantity_standard": "•  抵押hyn數量以最終鏈上交易數量為準。",
+  "invest_cant_undo": "·  投入Map3節點後不可撤銷。",
+  "account_flow": "合約流水",
+  "total": "總額",
+  "part_member": "參與地址",
+  "total_member_count": "共：$memberCount（個）",
+  "invite_friend_join": "邀請好友\n參加",
+  "sponsor": "發起人",
+  "node_mortgage_contract": "Map3節點合約",
+  "please_input_hyn_count": "請輸入HYN數量",
+  "broadcase_success": "廣播成功",
+  "map_node_broadcase_success_description": "已在區塊鏈上網絡廣播 ${actionType} Map3節點抵押合約的消息，區塊鏈網絡需要5-30分鐘開采驗證。",
+  "transfer_broadcase_success_description": "已在區塊鏈上網絡廣播轉賬的消息，區塊鏈網絡需要5-30分鐘開采驗證。",
+  "create": "創建",
+  "map_node_contract_address": "Map3節點合約(${receiverAddress})",
+  "launch": "發起",
   "remain_day_has_colon": "剩余：${remain}天",
   "remain_day": "剩余${remain}天",
   "can_extract": "可提取",
   "be_expired": "已到期",
-  "overdue_start_failed": "超期启动失败",
-  "view_contract": "查看合约",
-  "node_in_configuration": "节点配置中",
-  "wait_block_chain_verification": "正在创建中，等待区块链网络验证",
+  "overdue_start_failed": "超期啟動失敗",
+  "view_contract": "查看合約",
+  "node_in_configuration": "節點配置中",
+  "wait_block_chain_verification": "正在創建中，等待區塊鏈網絡驗證",
   "increase_investment": "增加投入",
   "mortgaged": "已抵押",
-  "node_is_running": "节点正在运行中。。。",
+  "node_is_running": "節點正在運行中。。。",
   "extract": "提取",
-  "node_revenue_extracted": "节点收益已经提取完成。",
+  "node_revenue_extracted": "節點收益已經提取完成。",
   "withdraw_fifty_revenue": "提取50%收益",
-  "node_half_revenue_had_withdraw": "节点一半的收益已经提取完成。",
-  "node_return_had_withdraw_finish": "节点退款已经提取完成。",
-  "node_wait_to_launch": "节点待启动",
-  "wait_to_launch": "合约等待启动",
-  "node_in_progress": "节点进行中",
-  "broadcase_sponsor_wait_net_verify": "已广播投入${amountDelegation} HYN，等待区块链网络验证",
-  "launch_success": "启动成功",
-  "node_had_stop": "节点已停止",
-  "expired_can_withdraw_rewards": "已到期,可提全部奖励",
-  "launch_fail_request_refund": "转入失败，请重新抵押",
-  "launch_fail": "启动失败",
-  "recovered_invested_capital": "已取回投入资金",
-  "earned_rewards": "已获取奖励",
-  "congratulation_reward_withdrawn": "恭喜，已提取奖励",
-  "map_node_detail": "Map3节点详情",
-  "click_view_detail": "点击查看详情",
-  "you_have_invested_hyn": "你已投入(HYN)",
-  "expected_output_hyn": "预期产出(HYN)",
-  "create_time": "创建时间",
-  "can_withdraw_fifty_reward": "可提50%奖励",
-  "expire_date": "到期时间",
-  "extract_time": "提取时间",
+  "node_half_revenue_had_withdraw": "節點壹半的收益已經提取完成。",
+  "node_return_had_withdraw_finish": "節點退款已經提取完成。",
+  "node_wait_to_launch": "節點待啟動",
+  "wait_to_launch": "合約等待啟動",
+  "node_in_progress": "節點進行中",
+  "broadcase_sponsor_wait_net_verify": "已廣播投入${amountDelegation} HYN，等待區塊鏈網絡驗證",
+  "launch_success": "啟動成功",
+  "node_had_stop": "節點已停止",
+  "expired_can_withdraw_rewards": "已到期,可提全部獎勵",
+  "launch_fail_request_refund": "轉入失敗，請重新抵押",
+  "launch_fail": "啟動失敗",
+  "recovered_invested_capital": "已取回投入資金",
+  "earned_rewards": "已獲取獎勵",
+  "congratulation_reward_withdrawn": "恭喜，已提取獎勵",
+  "map_node_detail": "Map3節點詳情",
+  "click_view_detail": "點擊查看詳情",
+  "you_have_invested_hyn": "妳已投入(HYN)",
+  "expected_output_hyn": "預期產出(HYN)",
+  "create_time": "創建時間",
+  "can_withdraw_fifty_reward": "可提50%獎勵",
+  "expire_date": "到期時間",
+  "extract_time": "提取時間",
   "extracting": "提取中...",
-  "exceed_the_limit": "超过限制",
-  "fund_password_error": "资金密码错误",
-  "param_error": "参数错误",
-  "unauthorized": "未授权",
-  "insufficient_permission": "权限不足",
-  "content_confict": "内容冲突",
-  "no_content": "无内容",
-  "network_error": "网络错误",
-  "create_account_fail": "创建用户失败",
-  "account_exist_direct_login": "账号已存在，请直接登录账号",
-  "update_user_info_fail": "更新用户信息失败",
-  "verification_code_error": "验证码错误",
-  "invitation_code_error": "邀请码错误",
-  "username_and_password_not_match": "用户名和密码不匹配",
-  "password_reset_error": "重置密码错误",
-  "punch_card_completed_came_tomorrow": "今天打卡任务已完成，请明日再来",
-  "check_interval_less_thirty_minutes": "打卡间隔低于30分钟",
-  "no_more_data": "没有更多数据了~",
-  "load_failed_click_retry": "加载失败，点击重试",
-  "price_show": "价格显示",
-  "my_initiated_map_contract": "我发起的",
-  "please_create_import_wallet": "请创建/导入钱包",
-  "my_join_map_contract": "我参与的",
-  "wallet_account": "钱包账户",
-  "create_map_node_must_have_block_account": "创建Map3抵押节点前，你必须先拥有一个区块链钱包账户。",
-  "undefind_error": "未定义错误",
-  "ten_thousand": "万",
-  "network_request_error": "网络请求异常~",
-  "click_retry": "点击重试",
-  "china": "中国",
-  "get_position_error_cant_contribution": "获取位置权限失败，无法贡献附近信号信息！",
-  "get_local_file_fail_cant_contribution": "获取读取本地文件权限失败，无法贡献附近信号信息！",
-  "get_device_fail_cant_contribution": "获取设备信息权限失败，无法贡献附近信号信息！",
+  "exceed_the_limit": "超過限制",
+  "fund_password_error": "資金密碼錯誤",
+  "param_error": "參數錯誤",
+  "unauthorized": "未授權",
+  "insufficient_permission": "權限不足",
+  "content_confict": "內容沖突",
+  "no_content": "無內容",
+  "network_error": "網絡錯誤",
+  "create_account_fail": "創建用戶失敗",
+  "account_exist_direct_login": "賬號已存在，請直接登錄賬號",
+  "update_user_info_fail": "更新用戶信息失敗",
+  "verification_code_error": "驗證碼錯誤",
+  "invitation_code_error": "邀請碼錯誤",
+  "username_and_password_not_match": "用戶名和密碼不匹配",
+  "password_reset_error": "重置密碼錯誤",
+  "punch_card_completed_came_tomorrow": "今天打卡任務已完成，請明日再來",
+  "check_interval_less_thirty_minutes": "打卡間隔低於30分鐘",
+  "no_more_data": "沒有更多數據了~",
+  "load_failed_click_retry": "加載失敗，點擊重試",
+  "price_show": "價格顯示",
+  "my_initiated_map_contract": "我發起的",
+  "please_create_import_wallet": "請創建/導入錢包",
+  "my_join_map_contract": "我參與的",
+  "wallet_account": "錢包賬戶",
+  "create_map_node_must_have_block_account": "創建Map3抵押節點前，妳必須先擁有壹個區塊鏈錢包賬戶。",
+  "undefind_error": "未定義錯誤",
+  "ten_thousand": "萬",
+  "network_request_error": "網絡請求異常~",
+  "click_retry": "點擊重試",
+  "china": "中國",
+  "get_position_error_cant_contribution": "獲取位置權限失敗，無法貢獻附近信號信息！",
+  "get_local_file_fail_cant_contribution": "獲取讀取本地文件權限失敗，無法貢獻附近信號信息！",
+  "get_device_fail_cant_contribution": "獲取設備信息權限失敗，無法貢獻附近信號信息！",
   "month": "月",
   "day": "日",
-  "create_import_wallet_account": "创建/导入钱包账户",
-  "isnt_trustwallet_cant_export": "不是TrustWallet钱包，不支持导出助记词",
+  "create_import_wallet_account": "創建/導入錢包賬戶",
+  "isnt_trustwallet_cant_export": "不是TrustWallet錢包，不支持導出助記詞",
   "example": "如",
   "can_use": "可用",
-  "input_transfer_num": "输入转账数量",
-  "transfer_num_bigger_zero": "转账数目必须大于0",
-  "map_contract_execution": "MAP3合约调用",
-  "not_legal_public_key": "不是合法的公钥",
-  "ciphertext_has_expired": "密文无效或已过期",
-  "click_refresh": "点击刷新",
-  "join_delegate": "参与抵押",
-  "manager_tip_hyn": "管理费(HYN)",
-  "withdrawRefund": "申请退款",
-  "contract_had_stop": "合约已结束",
-  "contract_had_expired": "合约已到期",
-  "create_contract_only_one_hint": "• 一个钱包地址同一时间内只能创建一个Map3节点合约。合约到期后可再创建一个。",
-  "contract_running": "合约运行中",
-  "check_is_create_contract_hint": "你已有一个创建合约的请求正处理中",
-  "happy_get_half_reward_hint": "恭喜你获得一半奖励",
-  "get_manage_tip_hyn": "获得管理费(HYN)",
-  "out_mange_tip_hyn": "支出管理费(HYN)",
-  "input_confirm_pending": "转入待确认中",
-  "output_confirm_pending": "提取待确认中",
-  "input_confirm_fail": "转入失败",
-  "output_confirm_fail": "提取失败",
-  "input_confirm_success": "已转入",
+  "input_transfer_num": "輸入轉賬數量",
+  "transfer_num_bigger_zero": "轉賬數目必須大於0",
+  "map_contract_execution": "MAP3合約調用",
+  "not_legal_public_key": "不是合法的公鑰",
+  "ciphertext_has_expired": "密文無效或已過期",
+  "click_refresh": "點擊刷新",
+  "join_delegate": "參與抵押",
+  "manager_tip_hyn": "管理費(HYN)",
+  "withdrawRefund": "申請退款",
+  "contract_had_stop": "合約已結束",
+  "contract_had_expired": "合約已到期",
+  "create_contract_only_one_hint": "• 壹個錢包地址同壹時間內只能創建壹個Map3節點合約。合約到期後可再創建壹個。",
+  "contract_running": "合約運行中",
+  "check_is_create_contract_hint": "妳已有壹個創建合約的請求正處理中",
+  "happy_get_half_reward_hint": "恭喜妳獲得壹半獎勵",
+  "get_manage_tip_hyn": "獲得管理費(HYN)",
+  "out_mange_tip_hyn": "支出管理費(HYN)",
+  "input_confirm_pending": "轉入待確認中",
+  "output_confirm_pending": "提取待確認中",
+  "input_confirm_fail": "轉入失敗",
+  "output_confirm_fail": "提取失敗",
+  "input_confirm_success": "已轉入",
   "output_confirm_success": "已提取",
-  "task_pending": "待处理中",
-  "task_finished": "处理完成",
-  "your_last_input_to_contract_func": "你的最新抵押：${input}, ${task_pending}",
-  "collect_request_have_post_please_wait_hint": "提取请求已提交，请耐心等候",
-  "happy_get_all_reward_hint": "恭喜你成功提取所有奖励",
-  "your_last_output_to_contract_func": "你的最新提取：$input, ${task_pending}",
-  "no_pengding_node_contract_hint": "没有待启动的节点合约\n您可以创建合约",
-  "delegation_full_will_active_hint": "抵押已满，即将启动",
-  "contract_share_content": "\"${who}\"在${appName}上发现了海伯利安${nodeName}合约，年化奖励去到${annualized}，周期${duration}天，邀请你前往围观！",
+  "task_pending": "待處理中",
+  "task_finished": "處理完成",
+  "your_last_input_to_contract_func": "妳的最新抵押：${input}, ${task_pending}",
+  "collect_request_have_post_please_wait_hint": "提取請求已提交，請耐心等候",
+  "happy_get_all_reward_hint": "恭喜妳成功提取所有獎勵",
+  "your_last_output_to_contract_func": "妳的最新提取：$input, ${task_pending}",
+  "no_pengding_node_contract_hint": "沒有待啟動的節點合約\n您可以創建合約",
+  "delegation_full_will_active_hint": "抵押已滿，即將啟動",
+  "contract_share_content": "\"${who}\"在${appName}上發現了海伯利安${nodeName}合約，年化獎勵去到${annualized}，周期${duration}天，邀請妳前往圍觀！",
   "reset_input_contract": "重新投入",
   "reset_output_contract": "重新提取",
-  "contract_launch_fail_please_get_back": "合约启动失败，请申请退款",
-  "mnemonic_qrcode_tip": "这个二维码包含你的助记词",
-  "qrcode": "二维码",
-  "delegation_amount_full": "抵押已满",
+  "contract_launch_fail_please_get_back": "合約啟動失敗，請申請退款",
+  "mnemonic_qrcode_tip": "這個二維碼包含妳的助記詞",
+  "qrcode": "二維碼",
+  "delegation_amount_full": "抵押已滿",
   "time_left": "剩余",
-  "camera_scan": "相机扫描",
-  "import_from_album": "从相册导入",
-  "select_qrcode_picture": "选择二维码图片",
-  "all_picture": "所有图片",
-  "select_picture": "选择图片",
-  "renew_contract_ing": "复投中...",
-  "renew_contract": "续约复投",
-  "join_map_node_must_have_block_account": "参与Map3抵押节点前，你必须先拥有一个区块链钱包账户。",
-  "launcher_time_left": "启动剩${time}",
-  "scan_qrcode_result": "扫码结果",
-  "global_node_map_title": "全球节点分布:",
-  "my_contract": "我的合约",
-  "active": "启动",
+  "camera_scan": "相機掃描",
+  "import_from_album": "從相冊導入",
+  "select_qrcode_picture": "選擇二維碼圖片",
+  "all_picture": "所有圖片",
+  "select_picture": "選擇圖片",
+  "renew_contract_ing": "復投中...",
+  "renew_contract": "續約復投",
+  "join_map_node_must_have_block_account": "參與Map3抵押節點前，妳必須先擁有壹個區塊鏈錢包賬戶。",
+  "launcher_time_left": "啟動剩${time}",
+  "scan_qrcode_result": "掃碼結果",
+  "global_node_map_title": "全球節點分布:",
+  "my_contract": "我的合約",
+  "active": "啟動",
   "expired": "到期",
-  "number": "编号",
-  "launcher_func": "发起人:  ${ownerName}",
+  "number": "編號",
+  "launcher_func": "發起人:  ${ownerName}",
   "n_second": "${n}秒",
   "left": "剩",
-  "n_hour_simple": "${hour}时",
-  "n_minute_simple": "${minute}钟",
-  "check_join": "查看参与",
-  "create_wallet_account_check_contract": "你需要先创建/导入钱包账户，才能查看你的钱包账户相关合约数据。",
-  "create_or_import_wallet_first": "请先创建/导入钱包",
-  "map_smart_contract_management": "map3智能合约管理",
-  "scan": "扫一扫",
-  "start_navigation_tips": "开始导航",
-  "nonce_too_low_hint": "nonce值太低",
-  "nonce_too_high_hint": "nonce值太高",
-  "gas_limit_reached_hint": "gas达到限制",
-  "insufficient_funds_for_transfer_hint": "转账资金不足",
-  "intrinsic_gas_too_low_hint": "固有gas太低",
-  "insufficient_funds_for_gas_price_value_hint": "gas资金不足",
-  "provision_insufficient_hint": "provision insufficient",
-  "not_half_time_to_collect_hint": "not half time to collect",
-  "already_collected_hint": "already collected",
-  "already_imported_hint": "已导入",
+  "n_hour_simple": "${hour}時",
+  "n_minute_simple": "${minute}鐘",
+  "check_join": "查看參與",
+  "create_wallet_account_check_contract": "妳需要先創建/導入錢包賬戶，才能查看妳的錢包賬戶相關合約數據。",
+  "create_or_import_wallet_first": "請先創建/導入錢包",
+  "map_smart_contract_management": "map3智能合約管理",
+  "scan": "掃壹掃",
+  "start_navigation_tips": "開始導航",
+  "nonce_too_low_hint": "隨機值太低",
+  "nonce_too_high_hint": "隨機值太高",
+  "gas_limit_reached_hint": "Gas超過區塊限制",
+  "insufficient_funds_for_transfer_hint": "轉賬資金不足",
+  "intrinsic_gas_too_low_hint": "指定Gas不夠",
+  "insufficient_funds_for_gas_price_value_hint": "gas資金不足",
+  "provision_insufficient_hint": "獎金池正在準備中",
+  "not_half_time_to_collect_hint": "未達到提取壹半收益的時間",
+  "already_collected_hint": "已經提取了",
+  "already_imported_hint": "已導入",
   "no_longer_valid_hint": "不再有效",
-  "transaction_limit_reached_hint": "Transaction limit reached",
-  "insufficient_gas_price_hint": "Insufficient gas price.",
-  "gas_price_too_low_to_replace_hint": "Gas price too low to replace",
-  "insufficient_gas_hint": "Insufficient gas.",
-  "insufficient_balance_for_transaction_hint": "Insufficient balance for transaction.",
-  "gas_limit_exceeded_hint": "Gas limit exceeded.",
-  "insufficient_balance_to_stake_hint": "insufficient balance to stake",
-  "self_delegation_insufficient_hint": "self delegation insufficient",
-  "delegation_insufficient_hint": "delegation insufficient",
-  "not_equal_to_remaining_delegation_hint": "not equal to remaining delegation",
-  "node_already_exist_hint": "node already exist",
-  "node_not_exist_hint": "node not exist",
-  "not_allow_to_delegate_in_unpending_state_hint": "not allow to delegate in unpending state",
-  "not_allow_to_collect_in_pending_state_hint": "not allow to collect in pending state",
-  "delegator_not_exist_hint": "delegator not exist",
-  "not_time_to_collect_hint": "not time to collect"
+  "transaction_limit_reached_hint": "達到交易次數上限",
+  "insufficient_gas_price_hint": "Gas價格過低.",
+  "gas_price_too_low_to_replace_hint": "Gas價格太低不足以覆蓋交易",
+  "insufficient_gas_hint": "Gas不足.",
+  "insufficient_balance_for_transaction_hint": "余額不足以轉賬.",
+  "gas_limit_exceeded_hint": "Gas總量不足.",
+  "insufficient_balance_to_stake_hint": "余額不足以抵押",
+  "self_delegation_insufficient_hint": "當前抵押金額不足",
+  "delegation_insufficient_hint": "抵押不足",
+  "not_equal_to_remaining_delegation_hint": "小於最小抵押量",
+  "node_already_exist_hint": "節點已經存在",
+  "node_not_exist_hint": "節點不存在",
+  "not_allow_to_delegate_in_unpending_state_hint": "非待啟動狀態不能抵押",
+  "not_allow_to_collect_in_pending_state_hint": "該狀態下不能提幣",
+  "delegator_not_exist_hint": "代理人不存在",
+  "not_time_to_collect_hint": "未達到提取收益的時間"
 }
