--- a/res/values/strings_zh_HK.arb
+++ b/res/values/strings_zh_HK.arb
@@ -607,7 +607,7 @@
   "create_or_import_wallet_first": "請先創建/導入錢包",
   "map_smart_contract_management": "map3智能合約管理",
   "scan": "掃壹掃",
-  "start_navigation_tips": "開始導航",
+  "start_navigation_tips": "欢迎您使用海伯利安地图，开始导航",
   "nonce_too_low_hint": "隨機值太低",
   "nonce_too_high_hint": "隨機值太高",
   "gas_limit_reached_hint": "Gas超過區塊限制",
