fix intl ko error

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4,11 +4,11 @@
   "route": "Route",
   "no_recommended_route": "No recommended route yet",
   "less_than_1_min": "Less than 1 minute",
-  "n_day": "${day} day ",
-  "n_hour": "${hour} hour ",
-  "n_minute": "${minute} minute ",
-  "km": "${km} km ",
-  "distance": "${distance} m",
+  "n_day": "{day} day ",
+  "n_hour": "{hour} hour ",
+  "n_minute": "{minute} minute ",
+  "km": "{km} km ",
+  "distance": "{distance} m",
   "official_website": "Official Website",
   "forum": "Forum",
   "telegram": "Telegram",
@@ -197,9 +197,9 @@
   "password_incorrect": "incorrect password",
   "transfer_fail": "Transfer failed",
   "eth_balance_not_enough_for_gas_fee": "ETH balance is insufficient to pay network fees",
-  "receiver_symbol": "Receive ${symbol}",
+  "receiver_symbol": "Receive {symbol}",
   "address_copied": "Address copied",
-  "my_symbol_address": "My ${symbol} Address:",
+  "my_symbol_address": "My {symbol} Address:",
   "dmap_document_title": "DMap Integration Document",
   "document_optimization": "optimizing document...",
   "map_dmap": "Map DMap",
@@ -244,7 +244,7 @@
   "share_app": "Share App",
   "dapp_setting": "DApp Settings",
   "private_share": "Private location Share",
-  "private_share_receive_address": "Receive Address : ${shortAddress}",
+  "private_share_receive_address": "Receive Address : {shortAddress}",
   "navigation": "Start",
   "my_location": "My Location",
   "setting": "Setting",
@@ -285,14 +285,14 @@
   "scan_exit_tips" : "Scanning, are you sure you want to quit?",
   "scan_hyn_is_empty" : "No HYN wallet",
   "scan_finish" : "Scan complete",
-  "scan_ing_func": "Scanning ${scanName}",
+  "scan_ing_func": "Scanning {scanName}",
   "scan_upload_error" : "Upload failed",
   "scan_upload_signal_success_hint": "Signal data uploaded successfully",
   "scan_thanks_contribution_signal_hint": "Thank you for your data contribution！",
   "scan_confirm_upload" : "Upload signal data",
-  "scan_collect_signal_func": "${Num} signals collected",
+  "scan_collect_signal_func": "{Num} signals collected",
   "selected_area": "Select region",
-  "what_region_use_titan": "What's the region do you use ${app}?",
+  "what_region_use_titan": "What's the region do you use {app}?",
   "select_region_tip": "Please select region",
   "data_position_adding": "Pending",
   "data_save": "Save",
@@ -399,7 +399,7 @@
   "epidemic_map_short": "NCP MAP",
   "search_failed": "搜索异常",
   "cannot_get_your_location": "获取不到你当前位置",
-  "wait_min": "${min} min",
+  "wait_min": "{min} min",
   "global_data": "Global Data",
   "global_data_map3": "Map3 node",
   "global_data_signal": "Signal Data",
@@ -407,7 +407,7 @@
   "signal_chart_desc_map3": "'' The Map3 node network enables a brand-new spatial data model, which aims to increase the infrastructure by 1000 times on a large scale, high performance and low cost. Map3 is a decentralized map / location supported by One Map algorithm technology Service PaaS, designed to support the construction of a large network of Map3 decentralized nodes. ''",
   "signal_chart_desc_signal": "'' Signal data will effectively improve the positioning accuracy of decentralized maps, as long as there are GPS, Bluetooth, base station or WIFI signal areas, it can provide effective emergency rescue, precise navigation and other positioning functions, suitable for outdoor Multi-scenario applications such as hiking or adventure. ''",
   "signal_chart_desc_poi": "'' POI contribution is based on the concept of decentralization of crowdsourcing and public governance. In the most effective way of decentralization, users are encouraged to contribute real and detailed location details. To avoid errors in POI information, the game system is launched Network verification, open to all map users to check the authenticity of POI data. In the future, if you want to search for nearby delicious and fun destinations, just enter keywords on the App home page, such as food, hotels, shopping malls, attractions, etc., you can view the location Click for details. ''",
-  "signal_chart_last_month_numbers_func": "Increment of ${scanName} data in the last month:",
+  "signal_chart_last_month_numbers_func": "Increment of {scanName} data in the last month:",
   "signal_total_data": "Total signal data:",
   "poi_total_data": "POI data distribution:",
   "wait_start_node_contract": "待启动的合约",
@@ -429,7 +429,7 @@
   "mortgage_hyn_num": "抵押HYN数量",
   "mortgage_wallet_balance": "（钱包余额 {balance}）",
   "mintotal_buy": "最低买入{minTotal}",
-  "mintotal_hyn": "不能少于${minTotal}HYN",
+  "mintotal_hyn": "不能少于{minTotal}HYN",
   "hyn_balance_no_enough": "HYN余额不足",
   "balance_portion_hyn": "剩余份额(HYN)：",
   "all_bug": "全部买入",
@@ -462,13 +462,13 @@
   "node_mortgage_contract": "Map3节点合约",
   "please_input_hyn_count": "请输入HYN数量",
   "broadcase_success": "广播成功",
-  "map_node_broadcase_success_description": "已在区块链上网络广播 ${actionType} Map3节点抵押合约的消息，区块链网络需要5-30分钟开采验证。",
+  "map_node_broadcase_success_description": "已在区块链上网络广播 {actionType} Map3节点抵押合约的消息，区块链网络需要5-30分钟开采验证。",
   "transfer_broadcase_success_description": "已在区块链上网络广播转账的消息，区块链网络需要5-30分钟开采验证。",
   "create": "创建",
-  "map_node_contract_address": "Map3节点合约(${receiverAddress})",
+  "map_node_contract_address": "Map3节点合约({receiverAddress})",
   "launch": "发起",
-  "remain_day_has_colon": "剩余：${remain}天",
-  "remain_day": "剩余${remain}天",
+  "remain_day_has_colon": "剩余：{remain}天",
+  "remain_day": "剩余{remain}天",
   "can_extract": "可提取",
   "be_expired": "已到期",
   "overdue_start_failed": "超期启动失败",
@@ -486,7 +486,7 @@
   "node_wait_to_launch": "节点待启动",
   "wait_to_launch": "合约等待启动",
   "node_in_progress": "节点进行中",
-  "broadcase_sponsor_wait_net_verify": "已广播投入${amountDelegation} HYN，等待区块链网络验证",
+  "broadcase_sponsor_wait_net_verify": "已广播投入{amountDelegation} HYN，等待区块链网络验证",
   "launch_success": "启动成功",
   "node_had_stop": "节点已停止",
   "expired_can_withdraw_rewards": "已到期,可提全部奖励",
@@ -568,13 +568,13 @@
   "output_confirm_success": "已提取",
   "task_pending": "待处理中",
   "task_finished": "处理完成",
-  "your_last_input_to_contract_func": "你的最新抵押：${input}, ${task_pending}",
+  "your_last_input_to_contract_func": "你的最新抵押：{input}, {task_pending}",
   "collect_request_have_post_please_wait_hint": "提取请求已提交，请耐心等候",
   "happy_get_all_reward_hint": "恭喜你成功提取所有奖励",
-  "your_last_output_to_contract_func": "你的最新提取：{input}, ${task_pending}",
+  "your_last_output_to_contract_func": "你的最新提取：{input}, {task_pending}",
   "no_pengding_node_contract_hint": "没有待启动的节点合约\n您可以创建合约",
   "delegation_full_will_active_hint": "抵押已满，即将启动",
-  "contract_share_content": "\"${who}\"在${appName}上发现了海伯利安${nodeName}合约，年化奖励去到${annualized}，周期${duration}天，邀请你前往围观！",
+  "contract_share_content": "\"{who}\"在{appName}上发现了海伯利安{nodeName}合约，年化奖励去到{annualized}，周期{duration}天，邀请你前往围观！",
   "reset_input_contract": "重新投入",
   "reset_output_contract": "重新提取",
   "contract_launch_fail_please_get_back": "合约启动失败，请申请退款",
@@ -590,18 +590,18 @@
   "renew_contract_ing": "复投中...",
   "renew_contract": "续约复投",
   "join_map_node_must_have_block_account": "参与Map3抵押节点前，你必须先拥有一个区块链钱包账户。",
-  "launcher_time_left": "启动剩${time}",
+  "launcher_time_left": "启动剩{time}",
   "scan_qrcode_result": "扫码结果",
   "global_node_map_title": "全球节点分布:",
   "my_contract": "我的合约",
   "active": "启动",
   "expired": "到期",
   "number": "编号",
-  "launcher_func": "发起人:  ${ownerName}",
-  "n_second": "${n}秒",
+  "launcher_func": "发起人:  {ownerName}",
+  "n_second": "{n}秒",
   "left": "剩",
-  "n_hour_simple": "${hour}时",
-  "n_minute_simple": "${minute}分",
+  "n_hour_simple": "{hour}时",
+  "n_minute_simple": "{minute}分",
   "check_join": "查看参与",
   "create_wallet_account_check_contract": "你需要先创建/导入钱包账户，才能查看你的钱包账户相关合约数据。",
   "create_or_import_wallet_first": "请先创建/导入钱包",
