--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -4,11 +4,11 @@
   "route": "路线",
   "no_recommended_route": "暂无推荐路线",
   "less_than_1_min": "小于1分钟",
-  "n_day": "${day}天",
-  "n_hour": "${hour}小时",
-  "n_minute": "${minute}分钟",
-  "km": "${km}公里",
-  "distance": "${distance}米",
+  "n_day": "{day}天",
+  "n_hour": "{hour}小时",
+  "n_minute": "{minute}分钟",
+  "km": "{km}公里",
+  "distance": "{distance}米",
   "official_website": "官网",
   "forum": "论坛",
   "telegram": "电报群",
@@ -197,9 +197,9 @@
   "password_incorrect": "密码错误",
   "transfer_fail": "转账失败",
   "eth_balance_not_enough_for_gas_fee": "ETH余额不足支付网络费用",
-  "receiver_symbol": "接收 ${symbol}",
+  "receiver_symbol": "接收 {symbol}",
   "address_copied": "地址已复制",
-  "my_symbol_address": "我的${symbol}接收地址:",
+  "my_symbol_address": "我的{symbol}接收地址:",
   "dmap_document_title": "DMap地图应用接入文档",
   "document_optimization": "文档优化中...",
   "map_dmap": "地图DMap",
@@ -244,7 +244,7 @@
   "share_app": "分享app",
   "dapp_setting": "DApp设置",
   "private_share": "私密分享",
-  "private_share_receive_address": "接收地址:${shortAddress}",
+  "private_share_receive_address": "接收地址:{shortAddress}",
   "navigation": "导航",
   "my_location": "我的位置",
   "setting": "设置",
@@ -285,14 +285,14 @@
   "scan_hyn_is_empty" : "HYN wallet 为空",
   "latest_version_tip": "已经是最新版本",
   "scan_finish" : "扫描完成",
-  "scan_ing_func": "正在扫描${scanName}信号",
+  "scan_ing_func": "正在扫描{scanName}信号",
   "scan_upload_error" : "上传失败",
   "scan_upload_signal_success_hint": "信号数据上传成功",
   "scan_thanks_contribution_signal_hint": "感谢您做的数据贡献！",
   "scan_confirm_upload" : "上传信号数据",
-  "scan_collect_signal_func": "已收集到${num}个信号",
+  "scan_collect_signal_func": "已收集到{num}个信号",
   "selected_area": "选择地区",
-  "what_region_use_titan": "你在什么地区使用${app}?",
+  "what_region_use_titan": "你在什么地区使用{app}?",
   "select_region_tip": "请选择地区",
   "data_save": "存储",
   "input_valid_address": "请输入合法的接收者地址",
@@ -399,7 +399,7 @@
   "epidemic_map_short": "新冠病毒地图",
   "search_failed": "搜索异常",
   "cannot_get_your_location": "获取不到你当前位置",
-  "wait_min": "${min} 分钟",
+  "wait_min": "{min} 分钟",
   "global_data": "全球数据",
   "global_data_map3": "Map3节点",
   "global_data_signal": "信号数据",
@@ -407,7 +407,7 @@
   "signal_chart_desc_map3": "''<strong>Map3节点</strong>网络启用全新的空间数据模型，旨在大规模、高性能及低成本地将基础设施提升<strong>1000倍</strong>。Map3是由<strong>One Map算法技术</strong>支撑的去中心化地图/位置服务PaaS, 旨在支持构建Map3<strong>去中心化节点</strong>的大型网络。''",
   "signal_chart_desc_signal": "''信号数据将有效提升去中心化地图的<strong>定位精准度</strong>，只要有<strong>GPS，蓝牙，基站或WIFI信号</strong>的地区就能提供有效的<strong>应急救援、精准导航</strong>等定位功能，适用于户外徒步或探险等多场景应用。''",
   "signal_chart_desc_poi": "''POI贡献基于<strong>众包、众治的去中心化理念</strong>，以去中心化的最有效方式鼓励用户贡献真实详细的<strong>位置详情</strong>。为避免POI信息有误，同时推出<strong>博弈系统</strong>配合网络验证，开放给所有地图用户<strong>查验POI数据真实性</strong>。未来想要搜索附近好吃好玩的目的地，只需在App首页输入关键字，如美食、酒店、商场、景点等，即可查看该位置点详情。''",
-  "signal_chart_last_month_numbers_func": "最近一个月${scanName}数据增量：",
+  "signal_chart_last_month_numbers_func": "最近一个月{scanName}数据增量：",
   "signal_total_data": "信号数据总量：",
   "poi_total_data": "用户贡献的POI数据分布：",
   "wait_start_node_contract": "待启动的节点",
@@ -429,7 +429,7 @@
   "mortgage_hyn_num": "抵押HYN数量",
   "mortgage_wallet_balance": "（钱包余额 {balance}）",
   "mintotal_buy": "最低买入{minTotal}",
-  "mintotal_hyn": "不能少于${minTotal}HYN",
+  "mintotal_hyn": "不能少于{minTotal}HYN",
   "hyn_balance_no_enough": "HYN余额不足",
   "balance_portion_hyn": "剩余份额(HYN)：",
   "all_bug": "全部买入",
@@ -462,13 +462,13 @@
   "node_mortgage_contract": "Map3节点",
   "please_input_hyn_count": "请输入HYN数量",
   "broadcase_success": "广播成功",
-  "map_node_broadcase_success_description": "已在区块链上网络广播 【${actionType} Map3节点的消息】，区块链网络需要5-30分钟开采验证。",
+  "map_node_broadcase_success_description": "已在区块链上网络广播 【{actionType} Map3节点的消息】，区块链网络需要5-30分钟开采验证。",
   "transfer_broadcase_success_description": "已在区块链上网络广播转账的消息，区块链网络需要5-30分钟开采验证。",
   "create": "创建",
-  "map_node_contract_address": "Map3节点(${receiverAddress})",
+  "map_node_contract_address": "Map3节点({receiverAddress})",
   "launch": "发起",
-  "remain_day_has_colon": "剩余：${remain}天",
-  "remain_day": "剩余${remain}天",
+  "remain_day_has_colon": "剩余：{remain}天",
+  "remain_day": "剩余{remain}天",
   "can_extract": "可提取",
   "be_expired": "已到期",
   "overdue_start_failed": "超期启动失败",
@@ -486,7 +486,7 @@
   "node_wait_to_launch": "节点待启动",
   "wait_to_launch": "等待启动",
   "node_in_progress": "节点进行中",
-  "broadcase_sponsor_wait_net_verify": "已广播投入${amountDelegation} HYN，等待区块链网络验证",
+  "broadcase_sponsor_wait_net_verify": "已广播投入{amountDelegation} HYN，等待区块链网络验证",
   "launch_success": "启动成功",
   "node_had_stop": "节点已停止",
   "expired_can_withdraw_rewards": "已到期,可提全部奖励",
@@ -567,14 +567,14 @@
   "output_confirm_success": "已提取",
   "task_pending": "待处理中",
   "task_finished": "处理完成",
-  "your_last_input_to_contract_func": "你的最新抵押：${input}, ${task_pending}",
+  "your_last_input_to_contract_func": "你的最新抵押：{input}, {task_pending}",
   "collect_request_have_post_please_wait_hint": "提取请求已提交，请耐心等候",
   "happy_get_all_reward_hint": "恭喜你成功提取所有奖励",
-  "your_last_output_to_contract_func": "你的最新提取：{input}, ${task_pending}",
+  "your_last_output_to_contract_func": "你的最新提取：{input}, {task_pending}",
   "no_pengding_node_contract_hint": "没有待启动的节点\n您可以创建节点",
   "delegation_full_will_active_hint": "抵押已满，即将启动",
   "expire_date": "期满可提",
-  "contract_share_content": "\"${who}\"在${appName}上发现了海伯利安${nodeName}节点，年化奖励去到${annualized}，周期${duration}天，邀请你前往围观！",
+  "contract_share_content": "\"{who}\"在{appName}上发现了海伯利安{nodeName}节点，年化奖励去到{annualized}，周期{duration}天，邀请你前往围观！",
   "reset_input_contract": "重新投入",
   "reset_output_contract": "重新提取",
   "contract_launch_fail_please_get_back": "节点启动失败，请申请退款",
@@ -590,18 +590,18 @@
   "renew_contract_ing": "复投中...",
   "renew_contract": "续约复投",
   "join_map_node_must_have_block_account": "参与Map3抵押节点前，你必须先拥有一个区块链钱包账户。",
-  "launcher_time_left": "启动剩${time}",
+  "launcher_time_left": "启动剩{time}",
   "scan_qrcode_result": "扫码结果",
   "global_node_map_title": "全球节点分布:",
   "my_contract": "Map3节点",
   "active": "启动",
   "expired": "到期",
   "number": "编号",
-  "launcher_func": "创建者: ${ownerName}",
-  "n_second": "${n}秒",
+  "launcher_func": "创建者: {ownerName}",
+  "n_second": "{n}秒",
   "left": "剩",
-  "n_hour_simple": "${hour}时",
-  "n_minute_simple": "${minute}分",
+  "n_hour_simple": "{hour}时",
+  "n_minute_simple": "{minute}分",
   "check_join": "查看参与",
   "create_wallet_account_check_contract": "你需要先创建/导入钱包账户，才能查看你的钱包账户相关合约数据。",
   "create_or_import_wallet_first": "请先创建/导入钱包",
