[Add] add pronounce page ui

--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -497,8 +497,8 @@
   "congratulation_reward_withdrawn": "恭喜，已提取奖励",
   "map_node_detail": "Map3节点详情",
   "click_view_detail": "访问节点",
-  "you_have_invested_hyn": "你已投入(HYN)",
-  "expected_output_hyn": "预期产出(HYN)",
+  "you_have_invested_hyn": "你已投入",
+  "expected_output_hyn": "预期产出",
   "create_time": "创建时间",
   "can_withdraw_fifty_reward": "可提50%奖励",
   "extract_time": "节点完成",
@@ -557,8 +557,8 @@
   "contract_running": "节点运行中",
   "check_is_create_contract_hint": "你已有一个创建节点的请求正处理中",
   "happy_get_half_reward_hint": "恭喜你获得一半奖励",
-  "get_manage_tip_hyn": "另获管理费(HYN)",
-  "out_mange_tip_hyn": "另付管理费(HYN)",
+  "get_manage_tip_hyn": "另获管理费",
+  "out_mange_tip_hyn": "另付管理费",
   "input_confirm_pending": "转入待确认中",
   "output_confirm_pending": "提取待确认中",
   "input_confirm_fail": "转入失败",
